--- a/数理モデル/整合跳躍数理モデル.md
+++ b/数理モデル/整合跳躍数理モデル.md
@@ -1,29 +1,75 @@
-# SSD：整合慣性×ランダム接続 — 跳躍の最小ハイブリッドモデル
+# SSD：整合慣性×ランダム接続 — 跳躍の最小ハイブリッドモデル（対数整合拡張版）
 
 ## 0. 目的と要約
 
 - **目的**：整合（決定論・省エネ）と、跳躍（確率論・接続拡張）を単一の時間発展で統合する
 - **要約**：
   - 既存の整合回路（オーム則アナロジー）に、未処理圧リザーバ $E$ を導入
+  - **対数整合層（Log-Alignment）** により広範な動的範囲での安定性を確保
   - $E$ が閾値を超えると**制約付きランダム接続**でネットワークを再配線（跳躍）
   - 跳躍後は放熱（$E$ 減衰）と慣性調整で再び整合へ
   - 硬直化すれば温度 $T \uparrow$ で探索を増やす
+
+**v2.0の新機能：** Weber–Fechner対応の対数整合により、極端な意味圧入力での破綻を防ぎ、飽和抑制と適応的感度調整を実現
 
 ---
 
 ## 1. 状態と変数
 
 ### 1.1. 基本構造
+
 - **構造ネットワーク**：$G = (\mathcal{S}, \mathcal{E}, w)$
   - $\mathcal{S}$：ノード集合（概念・戦術）
   - $\mathcal{E}$：エッジ集合（接続関係）
   - $w_{ij}$：エッジ重み
 
 ### 1.2. 動的変数
+
 - **整合慣性**：$\kappa_{ij}(t)$ - 経路の通りやすさ／記憶
 - **入力（意味圧）**：$p(t)$ - 課題ベクトル or スカラー
+- **変換意味圧**：$\hat{p}(t)$ - 対数整合により変換された意味圧（オプション）
 - **未処理圧リザーバ**：$E(t)$ - 整合不能の蓄積（"熱"）
 - **温度**：$T(t)$ - 探索の強さ
+- **適応ゲイン**：$\alpha_t$ - 対数整合の動的感度調整（オプション）
+
+---
+
+## 1a. 対数整合層（Log-Alignment Layer）
+
+### 1a.1. 理論的背景
+
+極端な意味圧（高難易度課題、強刺激）が入力された際、線形応答では：
+- 整合流 $j$ が過大になり、慣性 $\kappa$ が急激に変動
+- 未処理圧 $E$ が爆発的に蓄積
+- 不要な跳躍が頻発
+
+**Weber–Fechner対応の対数整合**により、これらを抑制します。
+
+### 1a.2. 対数変換の定義
+
+$$\hat{p}_i(t) = \operatorname{sign}(p_i) \cdot \frac{\log(1 + \alpha_t |p_i|)}{\log b}$$
+
+**適応ゲイン**（明暗順応のアナロジー）：
+
+$$\alpha_t = \frac{\alpha_0}{\epsilon + \mathrm{EMA}_\tau(\|p\|)}$$
+
+**パラメータ：**
+- $b$：対数底（既定は $e$）
+- $\alpha_0$：初期ゲイン（既定は $1.0$）
+- $\tau$：EMA時定数（既定は $50$）
+- $\epsilon$：数値安定化定数（$10^{-6}$）
+
+### 1a.3. 使用判断
+
+**対数整合を有効化すべき場合：**
+- 意味圧の動的範囲が広い（難易度が10倍以上変動）
+- 高負荷時に破綻が観測される
+- リアルタイム適応が必要（ゲーム、対話システム）
+
+**標準モデルで十分な場合：**
+- 意味圧が安定した範囲内
+- 計算コストを最小化したい
+- シンプルな線形応答で十分
 
 ---
 
@@ -34,31 +80,58 @@
 $$G_{ij}(t) = G_{0,ij} + g \cdot \kappa_{ij}(t)$$
 
 **パラメータ説明：**
+
 - $G_{0,ij}$：基本通りやすさ
 - $g > 0$：慣性の影響係数
 
 ### 2.2. 整合流（ネットワーク版オーム則）
 
+**標準版（線形応答）：**
+
 $$j_{ij}(t) = G_{ij}(t) \cdot a_{ij}(t)$$
+
+**対数整合版（非線形応答）：**
+
+$$j_{ij}(t) = G_{ij}(t) \cdot \hat{a}_{ij}(t)$$
+
+ここで、
 
 $$a_{ij}(t) = \langle\phi_i, p(t)\rangle - \langle\phi_j, p(t)\rangle$$
 
+$$\hat{a}_{ij}(t) = \langle\phi_i, \hat{p}(t)\rangle - \langle\phi_j, \hat{p}(t)\rangle$$
+
 **簡略版：**
-$$a_{ij}(t) = p(t)$$
+
+- 標準：$a_{ij}(t) = p(t)$
+- 対数整合：$\hat{a}_{ij}(t) = \hat{p}(t)$
 
 ### 2.3. 整合仕事（正味）
 
+**標準版：**
+
 $$\dot{W}_{\text{align}}(t) = \sum_{(i,j)} \left( p(t) \cdot j_{ij} - \rho \cdot j_{ij}^2 \right)$$
 
+**対数整合版：**
+
+$$\dot{W}_{\text{align}}(t) = \sum_{(i,j)} \left( \hat{p}(t) \cdot j_{ij} - \rho \cdot j_{ij}^2 \right)$$
+
 **パラメータ説明：**
+
 - 第1項：入力パワー
 - 第2項：抵抗損失（$\rho > 0$）
 
 ### 2.4. 慣性更新（学習・忘却）
 
+**標準版：**
+
 $$\frac{d\kappa_{ij}}{dt} = \eta \left[ p(t) \cdot j_{ij} - \rho \cdot j_{ij}^2 \right] - \lambda(\kappa_{ij} - \kappa_{\min})$$
 
+**対数整合版：**
+
+$$\frac{d\kappa_{ij}}{dt} = \eta \left[ \hat{p}(t) \cdot j_{ij} - \rho \cdot j_{ij}^2 \right] - \lambda(\kappa_{ij} - \kappa_{\min})$$
+
 **パラメータ説明：**
+
 - $\eta > 0$：学習率
 - $\lambda > 0$：忘却率
 - $\kappa_{\min} \geq 0$：慣性の下限値
@@ -67,15 +140,29 @@ $$\frac{d\kappa_{ij}}{dt} = \eta \left[ p(t) \cdot j_{ij} - \rho \cdot j_{ij}^2 
 
 ## 3. 未処理圧の蓄積（整合不能の計上）
 
+**標準版：**
+
 $$\frac{dE}{dt} = \alpha \left[ \|p(t)\| - \|J(t)\| \right]_+ - \beta E$$
 
+**対数整合版（スケール調整）：**
+
+$$\frac{dE}{dt} = \alpha \left[ \|p(t)\| - \zeta \cdot \|J(t)\| \right]_+ - \beta E$$
+
 **記号説明：**
+
 - $\|J(t)\| := \sqrt{\sum_{ij} j_{ij}^2}$：総整合流のノルム
 - $[x]_+ := \max(x, 0)$：正の部分のみ
 - $\alpha > 0$：蓄積係数
 - $\beta > 0$：自然減衰係数
+- $\zeta$：スケール整合係数（対数整合使用時）
 
-**物理的意味：** 整合が追いつかない差分を"熱"として貯蔵
+**$\zeta$ の推定**（対数整合使用時）：
+
+$$\zeta \approx \frac{1}{\log b} \cdot \|G_0 + g\kappa\|_{\text{op}}$$
+
+実務では起動後のEMAまたは学習で自動調整。既定値：$\zeta = 1.0$（自動推定推奨）。
+
+**物理的意味：** 整合が追いつかない差分を"熱"として貯蔵。対数整合時はスケールの不一致を $\zeta$ で補正。
 
 ---
 
@@ -191,19 +278,41 @@ $$\varepsilon(t) = \varepsilon_0 + d_1 E - d_2 \bar{\kappa}$$
 ## 8. 擬似コード（逐次更新）
 
 ```python
+# === 初期化 ===
+log_align_enabled = True  # 対数整合を使用
+if log_align_enabled:
+    log_layer = LogAlignmentLayer(alpha0=1.0, base=np.e, ema_tau=50)
+    zeta = 1.0  # 自動推定される
+
 for t in range(T_max):
+    # === 対数整合変換（オプション） ===
+    if log_align_enabled:
+        p_hat, alpha_t = log_layer.transform(p)
+    else:
+        p_hat = p
+        alpha_t = None
+    
     # === 整合ステップ（決定論的） ===
     # 1. 整合流の計算
     for (i, j) in edges:
-        j_ij = (G0[i,j] + g * kappa[i,j]) * a[i,j](p)
+        a_ij = p_hat if log_align_enabled else p  # 簡略版
+        j_ij = (G0[i,j] + g * kappa[i,j]) * a_ij
     
     # 2. 整合仕事と慣性更新
-    W_align = sum(p * j_ij - rho * j_ij**2 for all (i,j))
     for (i, j) in edges:
-        kappa[i,j] += eta * (p * j_ij - rho * j_ij**2) - lambda_f * (kappa[i,j] - kappa_min)
+        work = p_hat * j_ij - rho * j_ij**2 if log_align_enabled else p * j_ij - rho * j_ij**2
+        kappa[i,j] += eta * work - lambda_f * (kappa[i,j] - kappa_min)
     
-    # 3. 未処理圧の蓄積
-    E += alpha * max(norm(p) - norm(J), 0) - beta * E
+    # 3. 未処理圧の蓄積（スケール調整）
+    J_norm = norm(J)
+    if log_align_enabled:
+        # zetaの自動推定（EMA）
+        zeta = 0.95 * zeta + 0.05 * (norm(p_hat) / (J_norm + 1e-6))
+        residual = max(norm(p) - zeta * J_norm, 0)
+    else:
+        residual = max(norm(p) - J_norm, 0)
+    
+    E += alpha * residual - beta * E
 
     # === 跳躍判定（確率論的） ===
     # 4. 閾値と発火強度
@@ -237,6 +346,12 @@ for t in range(T_max):
     epsilon = epsilon0 + d1 * E - d2 * mean(kappa)
     if random() < epsilon:
         randomly_add_or_rewire_weak_edge(G)
+    
+    # === ログ記録（デバッグ用） ===
+    if log_align_enabled:
+        log_metrics(t, E, J_norm, zeta, alpha_t, entropy(policy))
+    else:
+        log_metrics(t, E, J_norm, entropy(policy))
 ```
 
 ---
@@ -253,13 +368,29 @@ for t in range(T_max):
    - 局所相関の低い $p_t$ を連続投入
    - 跳躍頻度と整合効率のトレードオフを計測
 
-### 9.2. パラメータ調整実験
+### 9.2. 対数整合の検証（オプション）
 
-3. **硬直化テスト**
+3. **飽和抑制テスト**
+   - 極端な意味圧（$\|p\| \gg$ 通常）を投入
+   - 標準版vs対数整合版で $E$ の蓄積速度を比較
+   - 期待結果：対数整合版で $E$ 爆発が抑制される
+
+4. **適応ゲインテスト**
+   - 意味圧の平均強度を段階的に変化
+   - $\alpha_t$ の追従を確認
+   - 期待結果：高強度環境で $\alpha_t \downarrow$、低強度環境で $\alpha_t \uparrow$
+
+5. **スケール整合テスト**
+   - $\zeta$ の自動推定が収束するか確認
+   - 対数空間と物理空間での整合効率の一貫性をチェック
+
+### 9.3. パラメータ調整実験
+
+6. **硬直化テスト**
    - $\lambda \downarrow$（忘却遅延）で硬直を意図的に誘発  
    - $T$ 制御の効果を検証
 
-4. **創造歩留まり測定**
+7. **創造歩留まり測定**
    - 新規接続の持続率（$\kappa$ 増加継続）を計測
    - 分布（近傍 vs 遠方接続）を分析
 
@@ -272,12 +403,22 @@ for t in range(T_max):
 - **閃き**：$E$ が閾値超え → 遠方ノードと接続 → 新経路が学習で固定
 - **暴走**：$T$ 過大や $\rho$ 低下 → ノイズ優位 → 整合効率低下・熱暴走
 - **冷静性**：$\beta \uparrow$, $c_2 \uparrow$ → 必要な跳躍のみを残すバランス調整
+- **適応的知覚**：対数整合による $\alpha_t$ の自動調整 → 明暗順応・音量順応のモデル化
+- **過負荷への耐性**：飽和抑制により、極端なストレス下でも破綻せず機能維持
 
 ### 10.2. 教育・訓練への応用
 
-- **適応的難易度**：$E$ レベルに応じた課題提示
+- **適応的難易度**：$E$ レベルに応じた課題提示、対数整合により広範な難易度に対応
 - **創造性促進**：意図的な $T$ 制御による探索誘導
-- **燃え尽き防止**：$\beta$ パラメータによる適切な休息設計
+- **燃え尽き防止**：$\beta$ パラメータによる適切な休息設計、対数整合で過負荷を自動緩和
+- **個別最適化**：$\alpha_t$ の追跡により学習者の感度特性を把握
+
+### 10.3. ゲームAI・対話システムへの応用
+
+- **動的難易度調整**：プレイヤーの熟練度（$\kappa$）に応じた課題生成
+- **驚きと納得の両立**：跳躍による予測不能性と整合による一貫性の共存
+- **リアルタイム適応**：対数整合により、初心者から上級者まで同一システムで対応
+- **エンゲージメント維持**：$E$ を適正範囲に保ち、退屈と過負荷を回避
 
 ---
 
@@ -308,6 +449,23 @@ for t in range(T_max):
 | $T_0$ | 0.3 | 0.1–0.7 | 探索温度の下限 |
 | $\sigma$ | 0.2 | 0.05–0.5 | ノイズ幅 |
 
+### 11.3. 対数整合パラメータ（オプション）
+
+| 記号 | 既定値 | 範囲 | 意味 |
+|------|--------|------|------|
+| `log_align_enabled` | False | True/False | 対数整合の有効化 |
+| $\alpha_0$ | 1.0 | 0.5–2.0 | 原点傾き（小信号ゲイン） |
+| $b$ | $e$ | $e$ or $10$ | 対数底（$e$:自然、$10$:dB） |
+| $\tau$ | 50 | 20–200 | EMA時定数（適応速度） |
+| $\epsilon$ | $10^{-6}$ | — | 数値安定化定数 |
+| $\zeta$ | auto | 0.5–2.0 | スケール整合係数 |
+
+**チューニング戦略：**
+
+- **動的範囲が広い環境**：`log_align_enabled=True`, $\tau$を環境変化速度に合わせる
+- **高負荷時の破綻防止**：$\alpha_0 \downarrow$で飽和を早める
+- **リアルタイム適応**：$\tau \downarrow$で適応を高速化（ただし不安定化リスク）
+
 *数値は目安。ゲーム速度やフレームレートに合わせてスケーリングが必要。*
 
 ---
@@ -335,10 +493,26 @@ for t in range(T_max):
 **核心的achievement：**
 
 1. **決定論と確率論の統合**：整合は決定論的、跳躍は確率論的に扱い、両者を自然に接続
-2. **観測可能な指標**：$E$, $T$, $H(\pi)$ などの KPI により挙動を定量化
-3. **実装レディ**：ゲーム AI や教育システムに直接応用可能な軽量設計
-4. **拡張性**：個人から社会まで、様々なスケールに適用可能
+2. **対数整合による飽和抑制**：Weber–Fechner則に基づく非線形変換で広範な動的範囲に対応
+3. **観測可能な指標**：$E$, $T$, $H(\pi)$, $\alpha_t$ などの KPI により挙動を定量化
+4. **実装レディ**：ゲーム AI や教育システムに直接応用可能な軽量設計
+5. **拡張性**：個人から社会まで、様々なスケールに適用可能
+
+**v2.0の進化点：**
+
+- **極端な意味圧への対応**：対数整合により、高難易度課題や強刺激での破綻を防止
+- **適応的感度調整**：環境の明暗順応のように、入力強度に応じて自動調整
+- **スケール不変性**：$\zeta$ パラメータにより、異なるスケールでの整合を統一的に扱える
 
 最も重要なのは、このモデルが「創造性」という予測困難な現象を、**制御可能でありながら驚きも提供する**システムとして実装できる道筋を示したことです。
 
 人間の「ひらめき」も AI の「創発」も、この統一的な数理言語で記述し、設計し、改良していくことが可能になるのです。
+
+---
+
+## 関連概念
+
+- [整合の数理モデル](./整合の数理モデル.md)
+- [対数整合対応モデル](./ssd：対数整合対応モデル_v_1_（log_alignment_拡張）.md)
+- [整合跳躍数理APIモデル](./整合跳躍数理APIモデル.md)
+- [最小整合跳躍数理モデル](./最小整合跳躍数理モデル.md)
