--- a/数理モデル/整合の数理モデル.md
+++ b/数理モデル/整合の数理モデル.md
@@ -62,10 +62,17 @@ $$\frac{dR_{\text{fast}}}{dt} = \kappa \cdot P(t) - \frac{1}{\tau_{\text{rec}}} 
 - $P(t) = j(t)^2 R(t)$：消費パワー
 - $\tau_{\text{rec}} > 0$：回復時定数
 
+**対数整合との関係：**
+- $P(t)$ の計算は整合流 $j(t)$ を使用（$j$ は既に $\hat{p}$ ベース）
+- 疲労は物理的な消費パワーで評価されるため、単位系変換は不要
+- E更新系（未処理圧リザーバ）を併用する場合、残差の計測空間（phys/log）を明示すること
+
 #### 疲労蓄積
+
 整合に伴い消費されるエネルギー $P(t)$ に比例して、抵抗が増加します。
 
 #### 休息回復
+
 負荷がかからない状態では、抵抗は指数関数的に減少します。
 
 ---
@@ -74,11 +81,39 @@ $$\frac{dR_{\text{fast}}}{dt} = \kappa \cdot P(t) - \frac{1}{\tau_{\text{rec}}} 
 
 ### 4.1. 基本モデル（単線モデル）
 
+#### 対数整合層（Log-Alignment）
+
+大信号への適応と小信号の線形性を両立するため、入力 $p$ を対数変換します。
+
+##### 適応ゲインの計算（EMA）
+
+$$\alpha_t = \frac{\alpha_0}{\varepsilon + \text{EMA}_\tau(|p|)}$$
+
+**パラメータ説明：**
+- $\alpha_0 > 0$：基準ゲイン（例: 1.0）
+- $\varepsilon > 0$：ゼロ除算防止（例: $10^{-6}$）
+- $\text{EMA}_\tau$：指数移動平均（減衰定数 $\tau \approx 0.98$）
+
+##### 符号保持対数変換
+
+$$\hat{p}(t) := \text{sign}(p) \cdot \frac{\log(1 + \alpha_t |p(t)|)}{\log b}$$
+
+**パラメータ説明：**
+- $b > 1$：対数底（$e$ または 10）
+- $\log(1 + x)$：`log1p` 関数（数値安定性）
+
+**効果：**
+- 小信号（$\alpha_t |p| \ll 1$）：$\hat{p} \approx p$ — 線形応答
+- 大信号（$\alpha_t |p| \gg 1$）：$\hat{p} \propto \log |p|$ — 飽和抑制
+- 順応：入力レベルの変化に $\alpha_t$ が自動調整
+
+**後方互換性：** フラグ `log_align = False` の場合は $\hat{p} = p$ として旧版と同等。
+
 #### 整合慣性 $\kappa$ と整合流 $j$
 
 「通りやすさ」を整合慣性 $\kappa(t)$ で直接モデル化します。
 
-$$j(t) = (G_0 + g \cdot \kappa(t)) \cdot p(t)$$
+$$j(t) = (G_0 + g \cdot \kappa(t)) \cdot \hat{p}(t)$$
 
 **パラメータ説明：**
 - $G_0 > 0$：基本コンダクタンス
@@ -89,7 +124,13 @@ $$j(t) = (G_0 + g \cdot \kappa(t)) \cdot p(t)$$
 
 整合仕事を以下のように定義します：
 
-$$\dot{W}_{\text{align}}(t) = p(t)j(t) - \rho j(t)^2 - \sigma p(t)^2$$
+$$\dot{W}_{\text{align}}(t) = \hat{p}(t) j(t) - \rho j(t)^2 - \sigma \hat{p}(t)^2$$
+
+**ネットワーク版（厳密）：** ポテンシャル差 $a(t)$ を用いる場合：
+
+$$\dot{W}_{\text{align}}(t) = a(t) j(t) - \rho j(t)^2$$
+
+ここで $a(t)$ は駆動力（電圧に相当）、$j(t)$ は整合流（電流に相当）。
 
 慣性の更新則：
 
@@ -97,10 +138,15 @@ $$\frac{d\kappa}{dt} = \eta \cdot \dot{W}_{\text{align}}(t) - \lambda \cdot (\ka
 
 **パラメータ説明：**
 - $\dot{W}_{\text{align}}(t)$：正味の整合仕事（「快」の源泉）
-- $\rho, \sigma > 0$：熱損失係数
+- $\rho, \sigma > 0$：熱損失係数（$\sigma$ は入力側損失、学習安定性重視なら $\sigma \to 0$ も可）
 - $\eta > 0$：学習効率
 - $\lambda > 0$：忘却率
 - $\kappa_{\min} > 0$：慣性の下限値
+
+**物理的意味：**
+- 対数整合使用時、$\hat{p}$ と $j$ は同じ変換後空間で計測され、単位系が一貫
+- 電力 = 電圧 × 電流のアナロジー（第1項）
+- 抵抗損失（第2項）、入力側損失（第3項）
 
 ### 4.2. 整合効率と慣性成長の関係
 
@@ -167,9 +213,39 @@ $$\dot{Q}_{\text{heat}} = \rho j_{\text{approach}}^2 + \sigma_b b^2$$
 - $\lambda \downarrow$：忘却遅延
 
 #### システムが不安定な場合
+
 - $\rho \uparrow$：失敗ペナルティ強化
 - $\sigma \uparrow$：入力負荷調整
 - $\kappa_{\min} \uparrow$：最低安定性確保
+
+### 6.3. 対数整合パラメータ（Log-Alignment）
+
+| 記号 | 既定値 | 範囲 | 意味 |
+|------|--------|------|------|
+| `log_align` | `True` | `True/False` | 対数整合の有効化 |
+| $\alpha_0$ | 1.0 | 0.5–2.0 | 基準ゲイン |
+| $b$ | $e$ (2.718) | $e$ または 10 | 対数底 |
+| $\tau_{\text{ema}}$ | 0.98 | 0.90–0.99 | EMA減衰定数 |
+| $\varepsilon$ | $10^{-6}$ | $10^{-8}$–$10^{-4}$ | ゼロ除算防止 |
+
+### 6.4. 実装時の安定化手法
+
+**ウォームアップ期間：**
+- 最初の $N$ ステップ（例: 50ティック）は $\alpha_t$ を安定化
+- 学習のみ許可、跳躍・探索はオフ
+- $\text{EMA}_\tau(|p|)$ が収束してから本格動作
+
+**クリッピング範囲：**
+
+$$\alpha_t \in [\alpha_{\min}, \alpha_{\max}]$$
+
+- 推奨値：$\alpha_{\min} = 10^{-2}$, $\alpha_{\max} = 10$
+- 発散防止と過補正防止の両立
+
+**計測空間ラベル（`unit_check`）：**
+- ログ出力に `"log-space"` または `"phys-space"` を記録
+- モード切替やスケール異常の検出に必須
+- デバッグ時の挙動追跡が容易に
 
 ---
 
@@ -205,9 +281,20 @@ $$R_{\text{fast}}(t) = R_0 e^{-t/\tau_{\text{rec}}} + \kappa \int_0^t P(\tau) e^
 ### 段階的アプローチ
 
 **第1段階：** 単線モデル（4.1節）で基本挙動を把握
-- KPI: 整合効率 $j/p$, 熱損失 $\dot{Q}_{\text{heat}}$
+
+**KPI（観測指標）：**
+
+- **整合効率（物理）**: $\eta_{\text{align,phys}} = \frac{\|j\|}{\|p\|}$ — 物理空間での入力に対する出力比
+- **整合効率（ログ）**: $\eta_{\text{align,log}} = \frac{\|j\|}{\|\hat{p}\|}$ — 対数空間での入力に対する出力比
+- **熱損失**: $\dot{Q}_{\text{heat}} = \rho j^2 + \sigma \hat{p}^2$
+
+**使い分け指針：**
+- 対数整合を使用する場合（`log_align = True`）：$\eta_{\text{align,log}}$ を主指標に
+- 物理スケールで評価する場合：$\eta_{\text{align,phys}}$ を主指標に
+- 両方を併記することで、モード切替時の挙動変化を追跡可能
 
 **第2段階：** 必要に応じて拡張
+
 - **反応頭打ち** → 並列整合モデル
 - **行動阻害** → 回避整合慣性モデル  
 - **手応えなき疲労** → 漏れ流モデル
